<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/button_Register"
        android:id="@+id/largeText_RegisterTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mediumText_Name"
        android:id="@+id/mediumText_Name"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/largeText_RegisterTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mediumText_Email"
        android:id="@+id/mediumText_Email"
        android:layout_below="@+id/mediumText_Name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mediumText_PW"
        android:id="@+id/mediumText_PW"
        android:layout_below="@+id/mediumText_Email"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mediumText_RepeatPW"
        android:id="@+id/mediumText_RepeatPW"
        android:layout_below="@+id/mediumText_PW"
        android:layout_alignParentStart="true" />

</RelativeLayout>